--- a/n/no/nor/northpoint.org.html
+++ b/n/no/nor/northpoint.org.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the northpoint.org privacy policy that was archived on 2018-12-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181226013319id_/http%3A//northpointministries.org/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the northpoint.org privacy policy that was archived on 2019-06-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190608155442id_/http%3A//northpointministries.org/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="no-js" lang="en"><!--<![endif]--><head id="www-northpointministries-org" data-template-set="html5-reset">
 	<title>North Point Ministries</title>
 	<meta charset="utf-8">
 	<!--<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">-->
 	<meta name="tp:EnableExternalController" content="true">
-	<meta name="description" content="North Point Ministries, Inc., was founded in 1995 with the vision of creating churches that un-churched people love to attend. Since its inception, NPM has grown from one church to five in metro-Atlanta and has developed a global network of more than thirty strategic partner churches.">
+	<meta name="description" content="North Point Ministries, Inc., was founded in 1995 with the vision of creating churches that un-churched people love to attend. Since its inception, NPM has grown from one church to five in metro-Atlanta and has developed a global network of more than 90 partner churches.">
 	<meta name="author" content="North Point Ministries">
 	<meta name="viewport" content="width=980, initial-scale=1.0, maximum-scale=1.0"><!-- width=device-width -->
 	<link rel="shortcut icon" href="/includes/img/favicon.png">
@@ -53,6 +53,7 @@
 			</div>
 		</div>
 	</header>
+
    
 
 	<article>
@@ -82,7 +83,7 @@
 
 <p><strong>Accessing Your Information</strong></p>
 
-<p>You may access Personal Information you provide to us, or correct or modify such Personal Information, or direct us not to disclose your Personal Information to any third party other than those necessary to complete a transaction you initiate on the Site, those related to a legal proceedings, or those related to a change in control of NPM or certain of its assets. To do so, please send an email with your request to <span data-eeencemail_fliolyhqqk="1"><a href="mailto:privacy@northpoint.org">privacy@northpoint.org</a></span><script type="text/javascript">/*<![CDATA[*/var out = '',el = document.getElementsByTagName('span'),l = ['>','a','/','<',' 103',' 114',' 111',' 46',' 116',' 110',' 105',' 111',' 112',' 104',' 116',' 114',' 111',' 110',' 64',' 121',' 99',' 97',' 118',' 105',' 114',' 112','>','\"',' 103',' 114',' 111',' 46',' 116',' 110',' 105',' 111',' 112',' 104',' 116',' 114',' 111',' 110',' 64',' 121',' 99',' 97',' 118',' 105',' 114',' 112',':','o','t','l','i','a','m','\"','=','f','e','r','h','a ','<'],i = l.length,j = el.length;while (--i >= 0)out += unescape(l[i].replace(/^\s\s*/, '&#'));while (--j >= 0)if (el[j].getAttribute('data-eeEncEmail_fLiOlYhQQK'))el[j].innerHTML = out;/*]]>*/</script>.</p>
+<p>You may access Personal Information you provide to us, or correct or modify such Personal Information, or direct us not to disclose your Personal Information to any third party other than those necessary to complete a transaction you initiate on the Site, those related to a legal proceedings, or those related to a change in control of NPM or certain of its assets. To do so, please send an email with your request to <span data-eeencemail_usuyohrtxh="1"><a href="mailto:privacy@northpoint.org">privacy@northpoint.org</a></span><script type="text/javascript">/*<![CDATA[*/var out = '',el = document.getElementsByTagName('span'),l = ['>','a','/','<',' 103',' 114',' 111',' 46',' 116',' 110',' 105',' 111',' 112',' 104',' 116',' 114',' 111',' 110',' 64',' 121',' 99',' 97',' 118',' 105',' 114',' 112','>','\"',' 103',' 114',' 111',' 46',' 116',' 110',' 105',' 111',' 112',' 104',' 116',' 114',' 111',' 110',' 64',' 121',' 99',' 97',' 118',' 105',' 114',' 112',':','o','t','l','i','a','m','\"','=','f','e','r','h','a ','<'],i = l.length,j = el.length;while (--i >= 0)out += unescape(l[i].replace(/^\s\s*/, '&#'));while (--j >= 0)if (el[j].getAttribute('data-eeEncEmail_USUYOhrTXh'))el[j].innerHTML = out;/*]]>*/</script>.</p>
 
 <p><strong>How We Use Your Information</strong></p>
 
@@ -98,7 +99,7 @@
 
 <p><strong>Children’s Privacy</strong></p>
 
-<p>We are committed to complying with the guidelines set forth by the Children’s Online Privacy Protection Act.&nbsp; The Site is not directed to children under the age of 13. We do not knowingly collect or maintain information on children under the age of 13. If you are the parent or guardian of a child age 13 or under who has provided us with Personal Information and you would like that information removed, please contact us at <span data-eeencemail_fduzcaredf="1"><a href="mailto:privacy@northpoint.org">privacy@northpoint.org</a></span><script type="text/javascript">/*<![CDATA[*/var out = '',el = document.getElementsByTagName('span'),l = ['>','a','/','<',' 103',' 114',' 111',' 46',' 116',' 110',' 105',' 111',' 112',' 104',' 116',' 114',' 111',' 110',' 64',' 121',' 99',' 97',' 118',' 105',' 114',' 112','>','\"',' 103',' 114',' 111',' 46',' 116',' 110',' 105',' 111',' 112',' 104',' 116',' 114',' 111',' 110',' 64',' 121',' 99',' 97',' 118',' 105',' 114',' 112',':','o','t','l','i','a','m','\"','=','f','e','r','h','a ','<'],i = l.length,j = el.length;while (--i >= 0)out += unescape(l[i].replace(/^\s\s*/, '&#'));while (--j >= 0)if (el[j].getAttribute('data-eeEncEmail_FDuZcAredf'))el[j].innerHTML = out;/*]]>*/</script>.</p>
+<p>We are committed to complying with the guidelines set forth by the Children’s Online Privacy Protection Act.&nbsp; The Site is not directed to children under the age of 13. We do not knowingly collect or maintain information on children under the age of 13. If you are the parent or guardian of a child age 13 or under who has provided us with Personal Information and you would like that information removed, please contact us at <span data-eeencemail_clcrelfbdl="1"><a href="mailto:privacy@northpoint.org">privacy@northpoint.org</a></span><script type="text/javascript">/*<![CDATA[*/var out = '',el = document.getElementsByTagName('span'),l = ['>','a','/','<',' 103',' 114',' 111',' 46',' 116',' 110',' 105',' 111',' 112',' 104',' 116',' 114',' 111',' 110',' 64',' 121',' 99',' 97',' 118',' 105',' 114',' 112','>','\"',' 103',' 114',' 111',' 46',' 116',' 110',' 105',' 111',' 112',' 104',' 116',' 114',' 111',' 110',' 64',' 121',' 99',' 97',' 118',' 105',' 114',' 112',':','o','t','l','i','a','m','\"','=','f','e','r','h','a ','<'],i = l.length,j = el.length;while (--i >= 0)out += unescape(l[i].replace(/^\s\s*/, '&#'));while (--j >= 0)if (el[j].getAttribute('data-eeEncEmail_cLCrElFbDl'))el[j].innerHTML = out;/*]]>*/</script>.</p>
 
 <p><strong>Third Party Applications</strong></p>
 
@@ -120,7 +121,7 @@
 
 <p>Under California’s "Shine the Light" law, California residents who provide Personal Information in obtaining products or services for personal, family, or household use are entitled to request and obtain from us once a calendar year information about the Personal Information we shared, if any, with other businesses for their own direct marketing uses. If applicable, this information would include the categories of Personal Information and the names and addresses of those businesses with which we shared Personal Information for the immediately prior calendar year (e.g., requests made in 2016 will receive information regarding 2015 sharing activities).</p>
 
-<p>To obtain this information from NPM please send an email message to <span data-eeencemail_mqsdfxkidd="1"><a href="mailto:privacy@northpoint.org">privacy@northpoint.org</a></span><script type="text/javascript">/*<![CDATA[*/var out = '',el = document.getElementsByTagName('span'),l = ['>','a','/','<',' 103',' 114',' 111',' 46',' 116',' 110',' 105',' 111',' 112',' 104',' 116',' 114',' 111',' 110',' 64',' 121',' 99',' 97',' 118',' 105',' 114',' 112','>','\"',' 103',' 114',' 111',' 46',' 116',' 110',' 105',' 111',' 112',' 104',' 116',' 114',' 111',' 110',' 64',' 121',' 99',' 97',' 118',' 105',' 114',' 112',':','o','t','l','i','a','m','\"','=','f','e','r','h','a ','<'],i = l.length,j = el.length;while (--i >= 0)out += unescape(l[i].replace(/^\s\s*/, '&#'));while (--j >= 0)if (el[j].getAttribute('data-eeEncEmail_mqsDFXkiDd'))el[j].innerHTML = out;/*]]>*/</script> with "Request for California Privacy Information" on the subject line and in the body of your message. The requested information, if required by law, will be provided to you at your email inbox.</p>
+<p>To obtain this information from NPM please send an email message to <span data-eeencemail_lpvwcssnwv="1"><a href="mailto:privacy@northpoint.org">privacy@northpoint.org</a></span><script type="text/javascript">/*<![CDATA[*/var out = '',el = document.getElementsByTagName('span'),l = ['>','a','/','<',' 103',' 114',' 111',' 46',' 116',' 110',' 105',' 111',' 112',' 104',' 116',' 114',' 111',' 110',' 64',' 121',' 99',' 97',' 118',' 105',' 114',' 112','>','\"',' 103',' 114',' 111',' 46',' 116',' 110',' 105',' 111',' 112',' 104',' 116',' 114',' 111',' 110',' 64',' 121',' 99',' 97',' 118',' 105',' 114',' 112',':','o','t','l','i','a','m','\"','=','f','e','r','h','a ','<'],i = l.length,j = el.length;while (--i >= 0)out += unescape(l[i].replace(/^\s\s*/, '&#'));while (--j >= 0)if (el[j].getAttribute('data-eeEncEmail_LpVWcssnwv'))el[j].innerHTML = out;/*]]>*/</script> with "Request for California Privacy Information" on the subject line and in the body of your message. The requested information, if required by law, will be provided to you at your email inbox.</p>
 
 <p>&nbsp;</p>
 
@@ -142,7 +143,7 @@
 
 	<footer>
 		<div class="inside">
-			<p>North Point Ministries | 4400 North Point Parkway Suite 100 | Alpharetta, GA 30022 | 678.892.5000<br>© 2018 North Point Ministries | <a href="/privacy/">Privacy Statement</a></p>
+			<p>North Point Ministries | 4400 North Point Parkway Suite 100 | Alpharetta, GA 30022 | 678.892.5000<br>© 2019 North Point Ministries | <a href="/privacy/">Privacy Statement</a></p>
 		</div>
 	</footer>
 </div>
