--- a/f/fr/fre/freelang.net.html
+++ b/f/fr/fre/freelang.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the freelang.net privacy policy that was archived on 2018-03-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20180308031215id_/http%3A//www.freelang.net/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the freelang.net privacy policy that was archived on 2019-06-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190608194127id_/https%3A//www.freelang.net/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,7 @@
 <meta http-equiv="content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="content-language" content="en">
 <meta name="language" content="en">
-<link rel="shortcut icon" href="http://www.freelang.net/pics/freelang.ico">
+<link rel="shortcut icon" href="https://www.freelang.net/pics/freelang.ico">
 
 <meta name="description" content="Freelang's privacy policy, our commitment against spam.">
 <meta name="keywords" content="freelang, dictionary, free dictionaries to download, electronic pocket dictionaries, translation software, instant translation, free human translation, professional translation">
@@ -57,11 +57,11 @@
 
 <div id="header_logo_dic">
 <table border="0" cellpadding="0" cellspacing="0"><tbody><tr valign="top">
-<td><a href="http://www.freelang.net/"><img src="pics/header/logo_freelang_blue175.png" width="175" height="125" border="0"></a></td>
+<td><a href="https://www.freelang.net/"><img src="pics/header/logo_freelang_blue175.png" width="175" height="125" border="0"></a></td>
 </tr></tbody></table>
 </div>
 
-﻿<div id="header_links_blue"><ul class="menulogin"><li><a href="http://www.freelang.net/ths/log_trad.php" rel="noindex,nofollow">Translator login</a> -</li><li><a href="http://forum.lokanova.net/search.php?search_id=newposts" target="_blank" rel="noindex,nofollow">Forum login (new posts)</a></li></ul><br><br><center><table cellspacing="0" cellpadding="5" border="0" bgcolor="#DDFFFF"><tbody><tr><td><img src="http://www.freelang.net/pics/header/logo_android.png" width="40" height="40"></td><td><span style="font-size: 0.9em;color: #000000;">New: Freelang for Android!<br><a href="https://play.google.com/store/apps/details?id=com.inssio.freelang" target="blank">Click here</a><br>or look up 'Freelang' on Google Play.</span></td></tr></tbody></table></center></div>
+﻿<div id="header_links_blue"><ul class="menulogin"><li><a href="https://www.freelang.net/ths/log_trad.php" rel="noindex,nofollow">Translator login</a> -</li><li><a href="http://forum.lokanova.net/search.php?search_id=newposts" target="_blank" rel="noindex,nofollow">Forum login (new posts)</a></li></ul><br><br><center><table cellspacing="0" cellpadding="5" border="0" bgcolor="#DDFFFF"><tbody><tr><td><img src="https://www.freelang.net/pics/header/logo_android.png" width="40" height="40"></td><td><span style="font-size: 0.9em;color: #000000;">New: Freelang for Android!<br><a href="https://play.google.com/store/apps/details?id=com.inssio.freelang" target="blank">Click here</a><br>or look up 'Freelang' on Google Play.</span></td></tr></tbody></table></center></div>
 <div id="header_koong">
 <img src="pics/header/koong125.jpg" width="335" height="125">
 </div>
@@ -70,19 +70,7 @@
 	
 	<div id="header_ligne2">
 
-﻿<div id="header_menu_rouge"><table width="100%" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td><a href="http://www.freelang.net"><img src="http://www.freelang.net/pics/header/tab_home.png" title="Freelang's homepage" alt="Freelang's homepage" width="106" height="40" border="0"></a><a href="http://www.freelang.net/dictionary/index.php"><img src="http://www.freelang.net/pics/header/tab_dictionary.png" title="Free downloadable and online dictionaries" alt="Free downloadable and online dictionaries" width="106" height="40" border="0"></a><a href="http://www.freelang.net/translation/index.php"><img src="http://www.freelang.net/pics/header/tab_translation.png" title="Email our volunteers for free human translation" alt="Free human translation" width="106" height="40" border="0"></a></td></tr></tbody></table></div><div id="header_fleche"><a href="http://www.freelang.net/translation/quotation.php"><img src="http://www.freelang.net/pics/header/tab_tradpro.png" title="Professional translation - Free quotation" alt="Professional translation" width="106" height="40" border="0"></a><img src="http://www.freelang.net/pics/header/tab_end.png" width="29" height="40" border="0"></div>
-<div id="header_gg_search">
-<form action="http://www.google.com/cse" id="cse-search-box">
-  <div>
-    <input type="hidden" name="cx" value="partner-pub-6680221801898083:iblg1q4lr6l">
-    <input type="hidden" name="ie" value="ISO-8859-1">
-    <input type="text" name="q" size="31">
-    <input type="submit" name="sa" value="Search">
-  </div>
-</form>
-<script type="text/javascript" src="http://www.google.com/cse/brand?form=cse-search-box&amp;lang=en"></script>
-</div>
-
+﻿<div id="header_menu_rouge"><table width="100%" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td><a href="https://www.freelang.net"><img src="https://www.freelang.net/pics/header/tab_home.png" title="Freelang's homepage" alt="Freelang's homepage" width="106" height="40" border="0"></a><a href="https://www.freelang.net/dictionary/index.php"><img src="https://www.freelang.net/pics/header/tab_dictionary.png" title="Free downloadable and online dictionaries" alt="Free downloadable and online dictionaries" width="106" height="40" border="0"></a><a href="https://www.freelang.net/translation/index.php"><img src="https://www.freelang.net/pics/header/tab_translation.png" title="Email our volunteers for free human translation" alt="Free human translation" width="106" height="40" border="0"></a></td></tr></tbody></table></div><div id="header_fleche"><a href="https://www.freelang.net/translation/quotation.php"><img src="https://www.freelang.net/pics/header/tab_tradpro.png" title="Professional translation - Free quotation" alt="Professional translation" width="106" height="40" border="0"></a><img src="https://www.freelang.net/pics/header/tab_end.png" width="29" height="40" border="0"></div>
 	</div>
 
 	<div id="header_ligne3">
@@ -96,12 +84,12 @@
 </script>
 </div>
 
-﻿<div id="header_drapeaux"><table border="0" cellpadding="0" cellspacing="0" width="100%" height="90"><tbody><tr valign="top"><td align="right"><a href="http://es.freelang.net/index.php"><img src="http://www.freelang.net/pics/header/bullet_flg_esp.png" width="30" height="20" border="0" title="Versión española de Freelang" alt="Versión española de Freelang"></a>&nbsp;&nbsp;<a href="http://www.freelang.com/index.php"><img src="http://www.freelang.net/pics/header/bullet_flg_fra.png" width="30" height="20" border="0" title="Version française de Freelang" alt="Version française de Freelang"></a></td></tr><tr valign="bottom"><td align="right"><a href="http://forum.lokanova.net/viewforum.php?f=12" target="_blank"><img src="http://www.freelang.net/pics/header/ico_forum_blue.png" width="48" height="48" border="0" title="Ask your questions or just meet our friendly members" alt="Forum Lokanova &amp; Freelang"></a>&nbsp;&nbsp;&nbsp;<a href="http://www.freelang.net/form.php"><img src="http://www.freelang.net/pics/header/ico_email_blue.png" width="48" height="48" border="0" title="Fill in a form and we will reply by email" alt="Contact us by email"></a>&nbsp;&nbsp;&nbsp;<a href="https://www.facebook.com/freelang.net"><img src="http://www.freelang.net/pics/header/ico_facebook.png" width="48" height="48" border="0" title="Our Facebook page" alt="Freelang on Facebook"></a></td></tr></tbody></table></div>
+﻿<div id="header_drapeaux"><table border="0" cellpadding="0" cellspacing="0" width="100%" height="90"><tbody><tr valign="top"><td align="right"><a href="https://es.freelang.net/index.php"><img src="https://www.freelang.net/pics/header/bullet_flg_esp.png" width="30" height="20" border="0" title="Versión española de Freelang" alt="Versión española de Freelang"></a>&nbsp;&nbsp;<a href="https://www.freelang.com/index.php"><img src="https://www.freelang.net/pics/header/bullet_flg_fra.png" width="30" height="20" border="0" title="Version française de Freelang" alt="Version française de Freelang"></a></td></tr><tr valign="bottom"><td align="right"><a href="http://forum.lokanova.net/viewforum.php?f=12" target="_blank"><img src="https://www.freelang.net/pics/header/ico_forum_blue.png" width="48" height="48" border="0" title="Ask your questions or just meet our friendly members" alt="Forum Lokanova &amp; Freelang"></a>&nbsp;&nbsp;&nbsp;<a href="https://www.freelang.net/form.php"><img src="https://www.freelang.net/pics/header/ico_email_blue.png" width="48" height="48" border="0" title="Fill in a form and we will reply by email" alt="Contact us by email"></a>&nbsp;&nbsp;&nbsp;<a href="https://www.facebook.com/freelang.net"><img src="https://www.freelang.net/pics/header/ico_facebook.png" width="48" height="48" border="0" title="Our Facebook page" alt="Freelang on Facebook"></a></td></tr></tbody></table></div>
 	</div>
 
 	<div id="right">
 
-﻿<table border="0" cellspacing="0" width="100%"><tbody><tr><td class="mainmenu3"><b>Other Freelang resources</b></td></tr><tr><td class="submenu2"><ul class="rightmenu"><li><a href="http://www.freelang.net/blog/quizzes/" title="Test your knowledge about languages and cultures">Quizzes</a></li><li><a href="http://www.freelang.net/expressions/index.php" title="Common expressions translated in many languages">Expressions in all languages</a></li><li><a href="http://www.freelang.net/blog/" title="Our blog: articles about languages">News about languages</a></li><li><a href="http://www.freelang.net/fonts/index.php" title="Free fonts to download to display foreign alphabets">Fonts for foreign languages</a></li><li><a href="http://www.freelang.net/families/index.php" title="800 main world languages classified by language families">Language families</a></li></ul></td></tr></tbody></table>
+﻿<table border="0" cellspacing="0" width="100%"><tbody><tr><td class="mainmenu3"><b>Other Freelang resources</b></td></tr><tr><td class="submenu2"><ul class="rightmenu"><li><a href="https://www.freelang.net/blog/quizzes/" title="Test your knowledge about languages and cultures">Quizzes</a></li><li><a href="https://www.freelang.net/expressions/index.php" title="Common expressions translated in many languages">Expressions in all languages</a></li><li><a href="https://www.freelang.net/blog/" title="Our blog: articles about languages">News about languages</a></li><li><a href="https://www.freelang.net/fonts/index.php" title="Free fonts to download to display foreign alphabets">Fonts for foreign languages</a></li><li><a href="https://www.freelang.net/families/index.php" title="800 main world languages classified by language families">Language families</a></li></ul></td></tr></tbody></table>
 <table border="0" cellspacing="0" width="100%"><tbody><tr><td class="mainmenu3"><b>Sponsored Links</b></td></tr>
 <tr><td class="subadsense2">
 <script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -116,19 +104,19 @@
 <table border="0" cellspacing="0" width="100%"><tbody><tr><td class="mainmenu3"><b>Stay in touch with Freelang</b></td></tr>
 <tr><td class="submenu2">
 <ul class="rightmenu">
-<li><img src="http://www.freelang.net/pics/bullet_facebook.png" width="16" height="16" border="0">&nbsp;<a href="https://www.facebook.com/freelang.net" title="Freelang on Facebook">Our Facebook page</a></li>
-<li><img src="http://www.freelang.net/pics/bullet_twitter.png" width="16" height="16" border="0">&nbsp;<a href="https://twitter.com/bmt_freelang" title="Freelang on Twitter">Follow us on Twitter</a></li>
-<li><img src="http://www.freelang.net/pics/bullet_rss.png" width="16" height="16" border="0">&nbsp;<a href="http://www.freelang.net/maj.php" title="All updates on the site">Updates and RSS feed</a></li>
+<li><img src="https://www.freelang.net/pics/bullet_facebook.png" width="16" height="16" border="0">&nbsp;<a href="https://www.facebook.com/freelang.net" title="Freelang on Facebook">Our Facebook page</a></li>
+<li><img src="https://www.freelang.net/pics/bullet_twitter.png" width="16" height="16" border="0">&nbsp;<a href="https://twitter.com/bmt_freelang" title="Freelang on Twitter">Follow us on Twitter</a></li>
+<li><img src="https://www.freelang.net/pics/bullet_rss.png" width="16" height="16" border="0">&nbsp;<a href="https://www.freelang.net/maj.php" title="All updates on the site">Updates and RSS feed</a></li>
 </ul>
-<form method="post" action="http://www.freelang.net/newsletter_us/index.php?action=subscribe">
+<!--<form method="post" action="https://www.freelang.net/newsletter_us/index.php?action=subscribe">
 <br><span style="font-family: Arial;font-size: 14px;color: #000000;">Subscribe to our newsletter:</span>
-<br><input type="text" name="email" size="20" value="your email" onfocus="value=''">
-<br><input type="radio" name="subscribe" value="S" checked="checked"><span style="font-family: Arial;font-size: 12px;color: #000000;">subscribe&nbsp;&nbsp;<input type="radio" name="subscribe" value="U">unsubscribe</span>
-<br><input type="submit" name="submit" value="OK">
-</form></td></tr>
+<br><input type="text" name="email" size=20 value="your email" onFocus="value=''">
+<br><input type="radio" name="subscribe" value="S" checked="checked" /><span style="font-family: Arial;font-size: 12px;color: #000000;">subscribe&nbsp;&nbsp;<input type="radio" name="subscribe" value="U" />unsubscribe</span>
+<br><input type="submit" name="submit" value="OK" />-->
+</td></tr>
 </tbody></table>
 
-﻿<table border="0" cellspacing="0" width="100%"><tbody><tr><td class="mainmenu3"><b>Help us promote Freelang</b></td></tr><tr><td class="submenu2"><ul class="rightmenu"><li><a class="a2a_dd" href="http://www.addtoany.com/share_save"><img src="http://static.addtoany.com/buttons/share_save_171_16.png" width="171" height="16" border="0" alt="Share"></a><script type="text/javascript">var a2a_config = a2a_config || {};a2a_config.num_services = 20;</script><script type="text/javascript" src="http://static.addtoany.com/menu/page.js"></script></li><li><a href="http://www.freelang.net/guestbook.php" title="Sign or read our guestbook">Sign or read our guestbook</a></li><li><a href="http://www.freelang.net/recommend.php" title="Recommend Freelang to a friend">Tell a friend about us</a></li><li><a href="http://www.freelang.net/link2us.php" title="Add a link to Freelang on your website">Link to us</a></li><li><a href="http://www.freelang.net/links/submit.php" title="Add your link to our language directory">Submit your site</a></li></ul></td></tr></tbody></table>
+﻿<table border="0" cellspacing="0" width="100%"><tbody><tr><td class="mainmenu3"><b>Help us promote Freelang</b></td></tr><tr><td class="submenu2"><ul class="rightmenu"><li><a href="https://www.freelang.net/guestbook.php" title="Sign or read our guestbook">Sign or read our guestbook</a></li><li><a href="https://www.freelang.net/recommend.php" title="Recommend Freelang to a friend">Tell a friend about us</a></li><li><a href="https://www.freelang.net/link2us.php" title="Add a link to Freelang on your website">Link to us</a></li><li><a href="https://www.freelang.net/links/submit.php" title="Add your link to our language directory">Submit your site</a></li></ul></td></tr></tbody></table>
 	</div>
 
 <div id="titre">
@@ -164,7 +152,7 @@
 
 	<div id="footer">
 
-﻿<ul class="menufooter"><li><a href="http://www.freelang.net/about.php" rel="noindex,nofollow">About this site</a> -</li><li><a href="http://www.freelang.net/privacy.php" rel="noindex,nofollow">Privacy policy</a> -</li><li><a href="http://www.freelang.net/site_map.html" rel="noindex,nofollow">Site map</a> -</li><li><a href="http://www.freelang.net/form.php" rel="noindex,nofollow">Contact us</a></li></ul><br>© Beaumont 1997-2018 - Freelang is a registered trademark
+﻿<ul class="menufooter"><li><a href="https://www.freelang.net/about.php" rel="noindex,nofollow">About this site</a> -</li><li><a href="https://www.freelang.net/privacy.php" rel="noindex,nofollow">Privacy policy</a> -</li><li><a href="https://www.freelang.net/site_map.html" rel="noindex,nofollow">Site map</a> -</li><li><a href="https://www.freelang.net/form.php" rel="noindex,nofollow">Contact us</a></li></ul><br>© Beaumont 1997-2019 - Freelang is a registered trademark
 	</div></div>
 
 
