--- a/s/sl/sli/slideserve.com.html
+++ b/s/sl/sli/slideserve.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the slideserve.com privacy policy that was archived on 2018-10-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181026015745id_/https%3A//www.slideserve.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the slideserve.com privacy policy that was archived on 2019-06-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190608202514id_/https%3A//www.slideserve.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 <title>Privacy Policy - SlideServe</title>
@@ -18,7 +18,7 @@
 <link href="/new/styles/bootstrap.min.css" rel="stylesheet">
 <link href="/new/styles/main.min.css" rel="stylesheet">
 <link href="/new/styles/innerpage.1.1.min.css" rel="stylesheet">
-
+<meta name="robots" content="index"> 
 <!-- Custom Fonts -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js" type="text/javascript"></script>
 <script language="JavaScript" src="//www.slideserve.com/js/myjavascript.js"></script>
@@ -29,6 +29,11 @@
 <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 <script src="https://oss.maxcdn.com/libs/respond.script/1.4.2/respond.min.js"></script>
 <![endif]-->
+<style>
+     @media (max-width: 1450px) and (min-width: 1300px) {
+  .container-header {width: 1160px !important;}
+  }
+  </style>
 
 <script type="text/javascript">
   $(function () {
@@ -74,14 +79,15 @@
 	  ga('send', 'pageview');
 	</script>
   <!-- google analytics code_end -->
-	
+	  
+
 </head>
 
 <body id="page-top" class="index">
 
 <!-- Navigation -->
 <nav class="navbar navbar-default navbar-fixed-top">
-<div class="container">
+<div class="container container-header">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header page-scroll">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -101,8 +107,9 @@
         <span class="caret"></span></button>
         <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
         <li><a href="/presentations" title="Latest Presentations">Recent Presentations</a></li>
-        <li><a href="/categories" title="Presentation Categories" rel="nofollow">Presentation Topics</a></li>
+        <li><a href="/topics" title="Presentation Topics" rel="nofollow">Presentation Topics</a></li>
         <li><a href="/userchannels" title="Presentation Channels" rel="nofollow">Presentation Channels</a></li>
+        <li><a href="/updates" title="Updated Presentations">Updated Presentations</a></li>
         <li class="divider"></li>
         <li><a href="/featured" title="Featured Presentations">Featured Presentations</a></li>
         </ul>
@@ -111,12 +118,15 @@
 
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav navbar-right navbar-right-top">
-              <!--<li class="pcreator">
-          <button class="btn btn-default topspbtn" type="button"onclick="window.parent.location ='https://www.slideserve.com/create?utm_source=slideserve&utm_medium=website&utm_campaign=presentation+creator';ga('send', 'event', 'presentation creator', 'click', 'presentation creator after logined');" title="Create Presentation Online" ><span class="browseText">Presentation Creator</span>
-          </button><span class="topspbtn-tooltip">new</span></li>-->
+               
           <li class="pcreator">
-            <button class="btn btn-default topspbtn" type="button" onclick="window.location ='https://www.slideserve.com/lead-generation?utm_source=slideserve&amp;utm_medium=website&amp;utm_campaign=collect+lead+button';" title="Collect Leads by adding lead-forms to your presentations"><span class="browseText">Collect Leads</span>
-            </button><span class="topspbtn-tooltip">new</span></li>
+            <button class="btn btn-default topspbtn" style="margin-right: 10px; border: 1px solid #febe2e; background: #0c2b3e !important; color: #fff !important;" type="button" onclick="window.location ='https://www.slideserve.com/lead-generation?utm_source=slideserve&amp;utm_medium=website&amp;utm_campaign=collect+lead+button';" title="Collect Leads by adding lead-forms to your presentations"><span class="browseText">Collect Leads</span>
+            </button>
+          </li>
+          <li class="pcreator">
+          <button class="btn btn-default topspbtn" type="button" onclick="window.parent.location ='https://www.slideserve.com/create?utm_source=slideserve&amp;utm_medium=website&amp;utm_campaign=presentation+creator';ga('send', 'event', 'presentation creator', 'click', 'presentation creator after logined');" title="Create Presentation Online"><span class="browseText">Presentation Creator</span>
+          </button><span class="topspbtn-tooltip">new</span>
+          </li>
         <li>
           <a href="/upload" rel="nofollow" data-toggle="modal" class="uploadcolor">Upload</a>
         </li>
@@ -133,12 +143,13 @@
   <div class="container">
     <ul class="nav navbar-nav quicklink quicklinksize">
     <li><a class="qlink" href="/" title="Home" rel="nofollow"><i class="fa fa-home"></i> Home</a></li>
-    <li><a class="qlink" href="/categories/10/Business-Finance" title="Business / Finance" rel="nofollow"><i class="fa fa-bar-chart"></i> Business</a></li>
-    <li><a class="qlink" href="/categories/12/Fashion-Beauty" title="Fashion / Beauty" rel="nofollow"><i class="fa fa-female"></i> Fashion</a></li>
-    <li><a class="qlink" href="/categories/29/Health-Fitness" title="Health / Fitness" rel="nofollow"><i class="fa fa-medkit"></i> Health</a></li>
-    <li><a class="qlink" href="/categories/13/Science-Technology" title="Science / Technology" rel="nofollow"><i class="fa fa-flask"></i> Science</a></li>
-    <li><a class="qlink" href="/categories/25/News-Politics" title="News / Politics" rel="nofollow"><i class="fa fa-newspaper-o"></i> News</a></li>
-    <li><a class="qlink" href="/categories" title="Categories"><i class="fa fa-plus"></i> More Topics</a></li>
+    <li><a class="qlink" href="/topics/business-finance" title="Business / Finance" rel="nofollow"><i class="fa fa-bar-chart"></i> Business</a></li>
+    <li><a class="qlink" href="/topics/fashion-beauty" title="Fashion / Beauty" rel="nofollow"><i class="fa fa-female"></i> Fashion</a></li>
+    <li><a class="qlink" href="/topics/health-fitness" title="Health / Fitness" rel="nofollow"><i class="fa fa-medkit"></i> Health</a></li>
+    <li><a class="qlink" href="/topics/science-technology" title="Science / Technology" rel="nofollow"><i class="fa fa-flask"></i> Science</a></li>
+    <li><a class="qlink" href="/topics/news-politics" title="News / Politics" rel="nofollow"><i class="fa fa-newspaper-o"></i> News</a></li>
+    <li><a class="qlink" href="/updates" title="Updates"><i class="fa fa-pencil"></i> Updates</a></li>
+    <li><a class="qlink" href="/topics" title="Topics"><i class="fa fa-plus"></i> More Topics</a></li>
     </ul>
   </div>
 </div>
@@ -317,7 +328,7 @@
     	<div class="container">
     		<div class="row">
     			<div class="col-lg-8 text-left">
-			    © 2018 SlideServe. All rights reserved | Powered By DigitalOfficePro			    </div>
+			    © 2019 SlideServe. All rights reserved | Powered By DigitalOfficePro			    </div>
 			    <div class="col-lg-4 text-right">
 			    	<ul class="list-inline">
 			    		<li><a href="http://www.facebook.com/SlideServe" rel="nofollow"><i class="fa fa-facebook"></i></a></li>
