--- a/h/hi/hid/hideme.be.html
+++ b/h/hi/hid/hideme.be.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hideme.be privacy policy that was archived on 2018-11-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181123131116id_/http%3A//www.hideme.be/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hideme.be privacy policy that was archived on 2019-06-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190609025607id_/http%3A//hideme.be/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>HideMe - Free Web Proxy &amp; Anonymous Surfing</title>
@@ -190,7 +190,7 @@
 		background-color: #555555;
 	}
 </style>
-	<script type="text/javascript">ginf={url:'http://www.hideme.be',script:'browse.php',target:{h:'',p:'',b:'',u:''},enc:{u:'EiH99uzWloEiKOAWTaUh2OXJ7gbao8OSgjPfBc0MqsU07lLQjtVb8IK3MJ1YHDGOMlRboFNCYwrVF2zOliNhOn8qWZessI42RL33fFw3ZNMsF94OhHWVSU9CIbU0JORo',e:'1',x:'',p:'1'},b:'13'}</script>
+	<script type="text/javascript">ginf={url:'http://www.hideme.be',script:'browse.php',target:{h:'',p:'',b:'',u:''},enc:{u:'ZwTozAkZ7ETuX7PLktGJWbtlvF02npdaJUm8kvXfZFzKCclKuPieRBpa6e2hr6g0OsZZNK4CfscFsmgMZoPGN4GI6xPnrVe5c1SPzLgF3g8jqeWgqzK2rfAoAdBRXDKZ',e:'1',x:'',p:'1'},b:'13'}</script>
 	<script type="text/javascript" src="http://www.hideme.be/includes/main.js?1.4.6"></script><script type="text/javascript">
 	window.addDomReadyFunc(function() {
 		document.getElementById('options').style.display = 'none';
@@ -205,7 +205,7 @@
 	   <h1> <img src="http://hideme.be/logo.png" alt="HideMe Free Proxy"></h1>  
           
 	<div id="content">
-	   <a href="index.php">Home</a>  | <a href="myip.php">My Ip</a> | <a href="tips.php">How To Stay Anonymous</a> | <a href="contact.php">Contact</a>
+<a href="index.php">Home</a> | <a href="myip.php">My Ip</a> | <a href="tips.php">How To Stay Anonymous</a> | <a href="contact.php">Contact</a> 
 		<h2>Privacy Policy</h2>
 <p>Your privacy is critically important to us. At HideMe we have a few fundamental principles:</p>
 <ul>
@@ -241,7 +241,6 @@
    
 	 
          <ul id="nav">
-
             <li><a href="https://www.socialmediabeheer.com/">Social Beheer</a></li>
             <li class="left"><a href="edit-browser.php">Edit Browser</a></li>
             <li class="left"><a href="cookies.php">Cookies</a></li>
